fix hero button on mobile and add about us to nav

--- a/sass/components/layout/_hero.scss
+++ b/sass/components/layout/_hero.scss
@@ -12,6 +12,10 @@
   .uk-overlay-primary {
     background-color: rgba(0, 0, 0, 0.8);
   }
+
+  .button {
+    width: 100% !important;
+  }
 }
 
 #post {
